option/oke/template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    app: app
spec:
  containers:
  - name: app
    image: ##DOCKER_PREFIX##/app:1.0
    ports:
    - containerPort: 8080
      name: app-port
  imagePullSecrets:
  - name: ocirsecret        
---
apiVersion: v1
kind: Pod
metadata:
  name: ui
  labels:
    app: ui
spec:
  containers:
  - name: ui
    image: ##DOCKER_PREFIX##/ui:1.0
    ports:
      - containerPort: 80
        name: http-port
  imagePullSecrets:
  - name: ocirsecret        
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
  - name: http-service-port
    protocol: TCP
    port: 80
    targetPort: http-port
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
  - name: http-service-port
    protocol: TCP
    port: 80
    targetPort: app-port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
